--- a/app/src/main/res/layout/view_feed_tag.xml
+++ b/app/src/main/res/layout/view_feed_tag.xml
@@ -17,44 +17,51 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/feedtagitem"
+  android:layout_width="match_parent"
+  android:layout_height="?android:attr/listPreferredItemHeightSmall"
+  android:background="?android:selectableItemBackground"
+  android:paddingBottom="2dip"
+  android:paddingTop="2dip"
+  tools:ignore="RtlSymmetry">
+
+  <TextView
+    android:id="@+id/tag_unreadcount"
+    android:layout_width="wrap_content"
     android:layout_height="?android:attr/listPreferredItemHeightSmall"
-    android:background="?android:selectableItemBackground"
-    android:paddingBottom="2dip"
-    android:paddingTop="2dip"
-    tools:ignore="RtlSymmetry">
+    android:gravity="center_vertical"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:paddingStart="2dp"
+    android:singleLine="true"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textColor="@color/secondary_text_material_dark"
+    android:textSize="@dimen/navdrawer_unreadcount_textsize"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tag_unreadcount"
-        android:layout_width="wrap_content"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:layout_alignParentEnd="true"
-        android:gravity="center_vertical"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-        android:paddingStart="2dp"
-        android:singleLine="true"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textColor="@color/secondary_text_material_dark"
-        android:textSize="@dimen/navdrawer_unreadcount_textsize" />
+  <ImageView
+    android:id="@+id/tag_expander"
+    android:layout_width="?android:attr/expandableListPreferredItemPaddingLeft"
+    android:layout_height="match_parent"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:src="@drawable/tinted_expand_more"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/tag_expander"
-        android:layout_width="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/tinted_expand_more" />
-
-    <TextView
-        android:id="@+id/tag_name"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:layout_toEndOf="@id/tag_expander"
-        android:layout_toStartOf="@id/feed_unreadcount"
-        android:gravity="center_vertical"
-        android:paddingEnd="2dp"
-        android:singleLine="true"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
-</RelativeLayout>
+  <TextView
+    android:id="@+id/tag_name"
+    android:layout_width="0dp"
+    android:layout_height="?android:attr/listPreferredItemHeightSmall"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:gravity="center_vertical"
+    android:paddingEnd="2dp"
+    android:singleLine="true"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    app:layout_constraintEnd_toStartOf="@+id/tag_unreadcount"
+    app:layout_constraintStart_toEndOf="@+id/tag_expander"
+    app:layout_constraintTop_toTopOf="parent" />
+</android.support.constraint.ConstraintLayout>
