--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -1,17 +1,17 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.FeedActivity">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/drawer_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fitsSystemWindows="true"
+  tools:context=".ui.FeedActivity"
+  tools:openDrawer="left">
 
   <!-- As the main content view, the view below consumes the entire
        space available using match_parent in both dimensions. -->
-  <include layout="@layout/include_activity_feed_main"/>
+  <include layout="@layout/include_activity_feed_main" />
   <!-- Nav drawer -->
-  <include layout="@layout/navdrawer_for_ab_overlay"/>
+  <include layout="@layout/navdrawer_for_ab_overlay" />
 
 </android.support.v4.widget.DrawerLayout>
