--- a/app/src/main/res/layout/list_story_item_layout.xml
+++ b/app/src/main/res/layout/list_story_item_layout.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+
+  <ImageView
+    android:id="@+id/story_image"
+    android:layout_width="@dimen/item_img_def_width"
+    android:layout_height="@dimen/item_img_def_width"
+    tools:src="@drawable/placeholder_image_list"
+    android:visibility="visible" />
+
+  <TextView
+    android:id="@+id/story_date"
+    style="@style/TextAppearance.ListItem.Author"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:layout_marginBottom="2dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="4dp"
+    android:singleLine="true"
+    tools:text="@tools:sample/date/mmddyy"
+    android:visibility="visible" />
+
+  <TextView
+    android:id="@+id/story_author"
+    style="@style/TextAppearance.ListItem.Author"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_marginBottom="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginTop="4dp"
+    android:layout_toStartOf="@id/story_date"
+    android:ellipsize="middle"
+    android:singleLine="true"
+    tools:text="@tools:sample/full_names"
+    android:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/story_image"
-        android:layout_width="@dimen/item_img_def_width"
-        android:layout_height="@dimen/item_img_def_width"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/story_date"
-        style="@style/TextAppearance.ListItem.Author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
-        android:singleLine="true"
-        android:text="2014-04-12 17:12"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/story_author"
-        style="@style/TextAppearance.ListItem.Author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginTop="4dp"
-        android:layout_toStartOf="@id/story_date"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        android:text="SuperDuperFeedWithVeryLongAddressIOnded.com"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/story_snippet"
-        style="@style/TextAppearance.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="2dp"
-        android:maxLines="5"
-        android:text="A long text that is supposed to touch the end of the line"
-        android:transitionName="title" />
+  <TextView
+    android:id="@+id/story_snippet"
+    style="@style/TextAppearance.Title"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="12dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginTop="2dp"
+    android:maxLines="5"
+    android:text="A long text that is supposed to touch the end of the line"
+    android:transitionName="title"
+    tools:text="@tools:sample/lorem/random" />
 </merge>
