--- a/app/src/main/res/layout/include_activity_feed_main.xml
+++ b/app/src/main/res/layout/include_activity_feed_main.xml
@@ -73,6 +73,7 @@
         android:background="?selectableItemBackground"
         android:checkMark="@drawable/nightmode_checkmark"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center_vertical|start"
         android:maxLines="1"
         android:text="@string/night_mode"
@@ -96,6 +97,7 @@
         android:background="?selectableItemBackground"
         android:checkMark="@drawable/notification_checkmark"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center_vertical|end"
         android:maxLines="1"
         android:text="@string/notify_for_new_items"
