Added option for maximum number of items per feed
And bumped default value from 50 to 100

Fixes #126

--- a/app/src/main/res/values/string_arrays.xml
+++ b/app/src/main/res/values/string_arrays.xml
@@ -46,4 +46,12 @@
     <item>1</item>
     <item>2</item>
   </string-array>
+
+  <string-array name="array_max_items_per_feed_options">
+    <item>50</item>
+    <item>100</item>
+    <item>200</item>
+    <item>500</item>
+    <item>1000</item>
+  </string-array>
 </resources>
