--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -41,4 +41,8 @@
     android:title="@string/share"
     app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
     app:showAsAction="ifRoom" />
+  <item
+    android:id="@+id/action_mark_as_unread"
+    android:title="@string/mark_as_unread"
+    app:showAsAction="never" />
 </menu>
