--- a/app/src/main/res/values/string_arrays.xml
+++ b/app/src/main/res/values/string_arrays.xml
@@ -2,6 +2,8 @@
 <resources>
   <string-array name="pref_sync_frequency_titles">
     <item>@string/sync_option_manually</item>
+    <item>@string/sync_option_every_15min</item>
+    <item>@string/sync_option_every_30min</item>
     <item>@string/sync_option_every_hour</item>
     <item>@string/sync_option_every_3_hours</item>
     <item>@string/sync_option_every_6_hours</item>
@@ -10,11 +12,13 @@
   </string-array>
   <string-array name="pref_sync_frequency_values">
     <item>0</item>
-    <item>1</item>
-    <item>3</item>
-    <item>6</item>
-    <item>12</item>
-    <item>24</item>
+    <item>15</item>
+    <item>30</item>
+    <item>60</item>
+    <item>180</item>
+    <item>360</item>
+    <item>720</item>
+    <item>1440</item>
   </string-array>
 
   <string-array name="array_open_article_options">
