--- a/app/src/main/res/menu/webview.xml
+++ b/app/src/main/res/menu/webview.xml
@@ -20,7 +20,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.ReaderActivity">
+    tools:context=".ui.ReaderWebViewActivity">
     <item
         android:id="@+id/action_open_enclosure"
         app:showAsAction="ifRoom"
@@ -34,7 +34,6 @@
     <item
         android:id="@+id/action_share"
         app:showAsAction="ifRoom"
-        app:actionProviderClass=
-        "android.support.v7.widget.ShareActionProvider"
+        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
         android:title="@string/share" />
 </menu>
