Fixed size of FAB icon on high density screens with vector graphic

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -34,11 +34,11 @@
     android:clickable="true"
     android:focusable="true"
     android:scaleType="center"
-    android:src="@drawable/ic_action_done_all"
     app:borderWidth="0dp"
     app:elevation="5dp"
     app:fabSize="normal"
-    app:pressedTranslationZ="7dp" />
+    app:pressedTranslationZ="7dp"
+    app:srcCompat="@drawable/ic_done_all_white_24dp" />
 
   <include
     layout="@layout/empty_feed"
