Removed unnecessary item decoration in favor of bottom padding
Using the non-obvious clipToPadding attribute.

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -16,8 +16,10 @@
       android:id="@android:id/list"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:clipToPadding="false"
       android:paddingLeft="@dimen/feed_list_padding"
       android:paddingRight="@dimen/feed_list_padding"
+      android:paddingBottom="@dimen/fab_list_bottom_padding"
       android:scrollbarStyle="outsideOverlay"
       android:scrollbars="vertical"
       tools:layoutManager="LinearLayoutManager"
