--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,7 +6,8 @@
 
   <color name="navdrawer_background">@color/dark_grey_850</color>
 
-  <color name="window_background">@color/dark_grey_850</color>
+  <!--<color name="window_background">@color/dark_grey_850</color>-->
+  <color name="window_background">@android:color/black</color>
   <color name="dialog_background">@color/dark_grey_800</color>
 
   <color name="title_text_color">@color/white_87</color>
