--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <ListPreference
+    android:defaultValue="@string/pref_theme_value_default"
+    android:entries="@array/pref_theme_options"
+    android:entryValues="@array/pref_theme_values"
+    android:key="pref_theme"
+    android:title="@string/theme" />
+
   <PreferenceCategory
       android:title="@string/synchronization">
 
