--- a/app/src/main/res/layout/view_feed_result.xml
+++ b/app/src/main/res/layout/view_feed_result.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  xmlns:tools="http://schemas.android.com/tools"
   android:background="?android:selectableItemBackground"
   android:minHeight="?android:attr/listPreferredItemHeightSmall"
   android:orientation="vertical"
@@ -18,7 +19,8 @@
     android:paddingTop="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textSize="14sp" />
+    android:textSize="14sp"
+    tools:text="@tools:sample/cities"/>
 
   <TextView
     android:id="@+id/feed_url"
@@ -30,8 +32,9 @@
     android:paddingTop="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textColor="@color/secondary_text_material_dark"
-    android:textSize="14sp" />
+    android:textColor="@color/secondary_text_color"
+    android:textSize="14sp"
+    tools:text="https://feed.url/rss.xml"/>
 
   <TextView
     android:id="@+id/feed_description"
@@ -42,6 +45,7 @@
     android:paddingTop="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textColor="@color/secondary_text_material_dark"
-    android:textSize="14sp" />
+    android:textColor="@color/secondary_text_color"
+    android:textSize="14sp"
+    tools:text="@tools:sample/lorem/random"/>
 </LinearLayout>
