--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,6 @@
   <color name="navdrawer_accent">@color/accent</color>
   <color name="black_overlay">#66000000</color>
 
-
   <color name="refresh_progress_1">#ffff1744</color>
   <color name="refresh_progress_2">#ff00e676</color>
   <color name="refresh_progress_3">#ff2979ff</color>
@@ -33,146 +32,21 @@
   <!-- TODO reference android:color/secondary_text_dark maybe? -->
   <color name="body_text_color">@android:color/secondary_text_light</color>
   <!-- TODO reference android:color/tertiary_text_dark maybe? -->
+  <color name="secondary_text_color">@android:color/secondary_text_light</color>
   <color name="tertiary_text_color">@android:color/secondary_text_light</color>
 
   <color name="code_text_bg">#e9e9e9</color>
 
-  <!-- Dark theme colors -->
   <color name="dark_grey_800">#424242</color>
   <color name="dark_grey_850">#303030</color>
-  <color name="dark_grey_900">#212121</color>
 
-  <!-- Material Text colors -->
-  <!-- 38% = 61 -->
   <color name="white_38">#61ffffff</color>
-  <!-- 54% = 8A -->
   <color name="white_54">#8affffff</color>
-  <!-- 87% = DE -->
   <color name="white_87">#deffffff</color>
 
-  <!-- Material Colors -->
-  <!-- White 50% -->
-  <color name="white_50">#80ffffff</color>
-  <!-- Black 50% -->
-  <color name="black_50">#80000000</color>
-
-  <!-- White 38% -->
-  <color name="secondary_text_material_dark">@color/white_38</color>
-  <!-- White 38% (TODO: same as secondary?) -->
-  <color name="tertiary_text_material_dark">@color/white_38</color>
-
-
-  <!-- Material colors -->
-  <eat-comment />
-
-  <color name="material_red_100">#fff4c7c3</color>
-  <color name="material_red_300">#ffe67c73</color>
-  <color name="material_red_500">#ffdb4437</color>
   <color name="material_red_700">#ffc53929</color>
-  <color name="material_red_A200">#ffff5252</color>
-  <color name="material_red_A400">#ffff1744</color>
-
-  <color name="material_blue_100">#ffc6dafc</color>
-  <color name="material_blue_300">#ff7baaf7</color>
-  <color name="material_blue_500">#ff4285f4</color>
-  <color name="material_blue_700">#ff3367d6</color>
-  <color name="material_blue_A200">#ff448aff</color>
-  <color name="material_blue_A400">#ff2979ff</color>
-
-  <color name="material_light_blue_A200">#ff40c4ff</color>
-
-  <color name="material_teal_100">#ffb2ebf2</color>
-  <color name="material_teal_300">#ff4dd0e1</color>
-  <color name="material_teal_500">#ff00bcd4</color>
-  <color name="material_teal_700">#ff0097a7</color>
-  <color name="material_teal_A200">#ff18ffff</color>
-  <color name="material_teal_A400">#ff00e5ff</color>
-
-  <!-- Accent color used by Settings -->
   <color name="material_dark_teal_A400">#ff009688</color>
-
-  <color name="material_green_100">#ffb7e1cd</color>
-  <color name="material_green_300">#ff57bb8a</color>
-  <color name="material_green_500">#ff0f9d58</color>
   <color name="material_green_700">#ff0b8043</color>
-  <color name="material_green_800">#ff2e7d32</color>
   <color name="material_green_900">#ff1b5e20</color>
-  <color name="material_green_A200">#ff69f0ae</color>
-  <color name="material_green_A400">#ff00e676</color>
-
-  <color name="material_lime_100">#fff0f4c3</color>
-  <color name="material_lime_300">#ffdce775</color>
-  <color name="material_lime_500">#ffcddc39</color>
-  <color name="material_lime_700">#ffafb42b</color>
-  <color name="material_lime_A200">#ffeeff41</color>
-  <color name="material_lime_A400">#ffc6ff00</color>
-
-  <color name="material_yellow_100">#fffce8b2</color>
-  <color name="material_yellow_300">#fff7cb4d</color>
-  <color name="material_yellow_500">#fff4b400</color>
-  <color name="material_yellow_700">#fff09300</color>
-  <color name="material_yellow_A200">#ffffcd40</color>
-  <color name="material_yellow_A400">#ffffbc00</color>
-
-  <color name="material_orange_100">#ffffe0b2</color>
-  <color name="material_orange_300">#ffffb74d</color>
-  <color name="material_orange_500">#ffff9800</color>
-  <color name="material_orange_700">#fff57c00</color>
-  <color name="material_orange_A200">#ffffab40</color>
-  <color name="material_orange_A400">#ffff9100</color>
-
-  <color name="material_deep_orange_100">#fff4c7c3</color>
-  <color name="material_deep_orange_300">#ffe67c73</color>
-  <color name="material_deep_orange_500">#ffff5722</color>
-  <color name="material_deep_orange_700">#ffc53929</color>
-  <color name="material_deep_orange_A200">#ffff5252</color>
-  <color name="material_deep_orange_A400">#ffff1744</color>
-
-  <!-- Neutral colors -->
-  <eat-comment />
-
-  <color name="material_grey_50">#fffafafa</color>
-  <color name="material_grey_100">#fff5f5f5</color>
-  <color name="material_grey_300">#ffeeeeee</color>
-  <color name="material_grey_500">#ffa3a3a3</color>
-  <color name="material_grey_600">#ff757575</color>
-  <color name="material_grey_700">#ff717171</color>
-  <color name="material_grey_900">#ff212121</color>
-
-  <color name="material_blue_grey_50">#ffeceff1</color>
-  <color name="material_blue_grey_100">#ffcfd8dc</color>
-  <color name="material_blue_grey_300">#ff90a4ae</color>
-  <color name="material_blue_grey_400">#ff78909c</color>
-  <color name="material_blue_grey_500">#ff607d8b</color>
-  <color name="material_blue_grey_600">#ff546e7a</color>
-  <color name="material_blue_grey_700">#ff455a64</color>
-  <color name="material_blue_grey_800">#ff37474f</color>
-  <!-- Primary color used by Settings -->
-  <color name="material_blue_grey_900">#ff263238</color>
-  <!-- Primary dark color used by Settings -->
-  <color name="material_blue_grey_950">#ff21272b</color>
-
-  <color name="material_brown_100">#ffd7ccc8</color>
-  <color name="material_brown_300">#ffa1887f</color>
-  <color name="material_brown_500">#ff795548</color>
-  <color name="material_brown_700">#ff5d4037</color>
-
-  <color name="material_deep_purple_100">#d1c4e9</color>
-  <color name="material_deep_purple_300">#9575cd</color>
-  <color name="material_deep_purple_500">#673ab7</color>
-  <color name="material_deep_purple_700">#512da8</color>
-  <color name="material_deep_purple_900">#311b92</color>
-
-  <!-- Sync indicator -->
-  <integer-array name="gplus_colors">
-    <item>@color/gplus_color_1</item>
-    <item>@color/gplus_color_2</item>
-    <item>@color/gplus_color_3</item>
-    <item>@color/gplus_color_4</item>
-  </integer-array>
-  <color name="gplus_color_1">#3e802f</color>
-  <color name="gplus_color_2">#f4b400</color>
-  <color name="gplus_color_3">#427fed</color>
-  <color name="gplus_color_4">#b23424</color>
 
 </resources>
