--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_margin="0dp"
-              android:orientation="vertical"
-              android:padding="0dp">
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_margin="0dp"
+  android:orientation="vertical"
+  android:padding="0dp">
 
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
@@ -19,8 +19,9 @@
       android:elevation="4dp"
       android:theme="@style/DarkToolbarThemeOverlay"/>
 
-  <FrameLayout
-      android:id="@+id/container"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+  <fragment
+    android:id="@+id/settings_fragment"
+    android:name="com.nononsenseapps.feeder.ui.SettingsFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 </LinearLayout>
