--- a/app/src/main/res/layout/list_story_item.xml
+++ b/app/src/main/res/layout/list_story_item.xml
@@ -1,51 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:minHeight="?android:listPreferredItemHeight">
-<FrameLayout
-    android:id="@+id/check_bg"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="invisible"
-    android:background="?itemSwipingBGColor">
-    <ImageView
-        android:id="@+id/check_left"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="start|center_vertical"
-        android:layout_marginStart="8dp"
+    android:layout_height="wrap_content"
+    android:background="?android:selectableItemBackground"
+    android:minHeight="?android:listPreferredItemHeight">
+
+    <FrameLayout
+        android:id="@+id/check_bg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?itemSwipingBGColor"
         android:visibility="invisible"
-        app:srcCompat="@drawable/ic_visibility_white_24dp"
-        android:contentDescription="@string/indicator_for_mark_as_read" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/check_right"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/indicator_for_mark_as_read"
         android:visibility="invisible"
-        app:srcCompat="@drawable/ic_visibility_white_24dp"
-        android:contentDescription="@string/indicator_for_mark_as_read" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_visibility_white_24dp" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/check_left"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/indicator_for_mark_as_read"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_visibility_white_24dp" />
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/swiping_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:minHeight="?android:listPreferredItemHeight"
+        android:paddingStart="@dimen/keyline_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry">
 
-        <com.nononsenseapps.feeder.views.ListStoryItem
-            android:id="@+id/story"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/story_image"
+            android:layout_width="@dimen/item_img_def_width"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/placeholder_image_list_day_64dp" />
+
+        <TextView
+            android:id="@+id/story_date"
+            style="@style/TextAppearance.ListItem.Author"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?android:selectableItemBackground"
-            android:minHeight="?android:listPreferredItemHeight"
-            android:paddingStart="@dimen/keyline_1"
-            tools:ignore="RtlSymmetry" />
-    </FrameLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="2dp"
+            android:singleLine="true"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/story_snippet"
+            app:layout_constraintEnd_toStartOf="@id/story_image"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_goneMarginEnd="@dimen/keyline_1"
+            tools:text="@tools:sample/date/mmddyy" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/story_author"
+            style="@style/TextAppearance.ListItem.Author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/story_snippet"
+            app:layout_constraintEnd_toStartOf="@id/story_date"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0"
+            tools:text="@tools:sample/full_names" />
+
+        <TextView
+            android:id="@+id/story_snippet"
+            style="@style/TextAppearance.Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="4dp"
+            android:maxLines="5"
+            android:paddingBottom="12dp"
+            android:transitionName="title"
+            app:layout_constraintEnd_toStartOf="@id/story_image"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/story_author"
+            app:layout_goneMarginEnd="@dimen/keyline_1"
+            tools:text="@tools:sample/cities" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
