--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
   <color name="accent">@color/material_dark_teal_A400</color>
   <color name="accent_light">@color/material_dark_teal_A400</color>
@@ -12,9 +12,11 @@
 
   <color name="title_text_color">@color/white_87</color>
   <color name="title_text_read_color">@color/white_54</color>
-  <!-- TODO reference android:color/secondary_text_dark maybe? -->
   <color name="body_text_color">@color/white_38</color>
-  <!-- TODO reference android:color/tertiary_text_dark maybe? -->
   <color name="secondary_text_color">@android:color/secondary_text_dark</color>
   <color name="tertiary_text_color">@android:color/secondary_text_dark</color>
+
+  <color name="reader_title_color">@android:color/primary_text_dark</color>
+  <color name="reader_author_color">@android:color/secondary_text_dark</color>
+  <color name="reader_body_color">@color/white_87</color>
 </resources>
