--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,19 +27,24 @@
 
   <color name="ripple_material_dark" tools:override="true">@color/accent</color>
 
-  <color name="title_text_color">@android:color/primary_text_light</color>
-  <color name="title_text_read_color">@android:color/secondary_text_light</color>
-  <!-- TODO reference android:color/secondary_text_dark maybe? -->
-  <color name="body_text_color">@android:color/secondary_text_light</color>
-  <!-- TODO reference android:color/tertiary_text_dark maybe? -->
+  <color name="title_text_color">@color/black_87</color>
+  <color name="title_text_read_color">@color/black_54</color>
+  <color name="body_text_color">@color/black_54</color>
   <color name="secondary_text_color">@android:color/secondary_text_light</color>
   <color name="tertiary_text_color">@android:color/secondary_text_light</color>
+
+  <color name="reader_title_color">@android:color/primary_text_light</color>
+  <color name="reader_author_color">@android:color/secondary_text_light</color>
+  <color name="reader_body_color">@color/black_87</color>
 
   <color name="code_text_bg_day">#e9e9e9</color>
   <color name="code_text_bg_night">#434343</color>
 
   <color name="dark_grey_800">#424242</color>
   <color name="dark_grey_850">#303030</color>
+
+  <color name="black_54">#8a000000</color>
+  <color name="black_87">#de000000</color>
 
   <color name="white_38">#61ffffff</color>
   <color name="white_54">#8affffff</color>
