--- a/app/src/main/res/layout/list_story_item.xml
+++ b/app/src/main/res/layout/list_story_item.xml
@@ -87,7 +87,7 @@
         <TextView
             android:id="@+id/story_author"
             style="@style/TextAppearance.ListItem.Author"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginTop="4dp"
