--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <string name="app_name" translatable="false">Feeder</string>
+
   <string name="pref_theme_value_default">@string/pref_theme_value_day</string>
   <string name="pref_theme_value_system">system</string>
   <string name="pref_theme_value_auto">auto</string>
